trunk/Archive2/38/1a556c735acaa1/output
main.cpp: In function 'int main()':
main.cpp:98:13: error: ambiguous overload for 'operator=' (operand types are 'Object::Proxy' and 'Object::Proxy')
     ob[idx] = ob[idy]
             ^
main.cpp:98:13: note: candidates are:
main.cpp:56:23: note: const Object::Proxy& Object::Proxy::operator=(const Object&)
         const Proxy&  operator= (const Object& rhs_ob) {
                       ^
main.cpp:34:11: note: Object::Proxy& Object::Proxy::operator=(const Object::Proxy&) <deleted>
     class Proxy {
           ^
main.cpp:34:11: note: Object::Proxy& Object::Proxy::operator=(Object::Proxy&&) <deleted>
